Fix header width pushing the content off-screen

--- a/src/pages/2020/index.scss
+++ b/src/pages/2020/index.scss
@@ -26,7 +26,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      flex: none;
+      // flex: 1;
     }
   }
 
